--- a/templates/workflows.html
+++ b/templates/workflows.html
@@ -90,7 +90,7 @@
                         </td>
                         <td>{{ buy.created_at.strftime('%Y-%m-%d %H:%M') if buy.created_at else 'N/A' }}</td>
                         <td>
-                            {% if buy.status == 'pending_manual' %}
+                            {% if buy.status == 'pending_approval' %}
                             <a href="/tenant/{{ tenant.tenant_id }}/media-buy/{{ buy.media_buy_id }}/approve" class="btn btn-sm btn-primary" title="Review and Approve">
                                 Review & Approve
                             </a>
